dataset1235/2025-2/805158916/users/3229587912/executions/71079933_3221148872.log
== RUN (2025-08-13 14:12:55)
-- CODE: 
Print(40+35)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Print(40+35)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Print(40+35)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 14:13:14)
-- CODE: 
print(40+35)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 14:12:57)
-- CODE: 
Print(40+35)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Print(40+35)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Print(40+35)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
